# autoopen

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
autoopen/: __init__.py
tests/: hello.txt.lzma  hello.txt.zst  test_autoopen.py
