[tool.poetry]
name = "autoopen"
version = "0.1.0"
description = ""
authors = ["Thorsten Vitt <thorsten.vitt@uni-wuerzburg.de>"]

[tool.poetry.dependencies]
python = "^3.9"
zstandard = {version = "^0.17.0", optional = true}

[tool.poetry.extras]
compressors = ["zstandard"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

